updated sass files

--- a/lesson04/assignment/css/_settings.variables.scss
+++ b/lesson04/assignment/css/_settings.variables.scss
@@ -8,9 +8,11 @@ $aliceblue: #f0f8ff;
 $black: #000000;
 $white: #ffffff;
 
-
 $font-fam: "arial, helvetica, sans-serif";
 
-$a:focus: #696969
+//$a:focus: #696969;
+$link-color: #696969;
+$link-focus-color: #dcdcdc;
+
 $h1-p: #666666; /* h1 - card-image, p - card-details */
 $p: #191970; /* p - aside midnightblue */
