--- a/lesson04/assignment/css/_components.content.scss
+++ b/lesson04/assignment/css/_components.content.scss
@@ -9,10 +9,10 @@ html {
 }
 
 body {
-  width: 850px;
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 2em;
+  //width: 850px;
   /* font-size: 1.2em; */
-  line-height: 1.4;
+  //line-height: 1.4;
 }
 
 .main {
